# deep-learning-toolkit

./: .gitignore  AGENTS.md  Makefile  README.md  WARP.md  pyproject.toml
.github/workflows/: compile.yml  format.yml  lint.yml  publish.yml  test.yml  tests.yml
dl/nets/: mlp.py
dlk/: mode.py
dlk/config/: parameters.py  params.py
dlk/loss/: __init__.py  gaussian.py  hinge_gan.py  least_squares_gan.py  wasserstein.py  wasserstein_gan.py
dlk/metrics/: hellinger.py  mmd.py  utils.py  wasserstein.py
dlk/mgmt/: log.py  parameters.py
dlk/nets/: autoencoder.py  conv1d.py  conv2d.py  diffusion.py  efficientnet.py  mlp.py  transformer1d.py  transformer_experiment.py  unet.py  util.py  utils.py
dlk/opt/: optimizer.py  profiler.py  scheduler.py  train.py  train_diffusion.py  train_gan.py  utils.py
dlk/plt/: plot_loss.py
dlkit/log/: log_util.py  log_utils.py
dlkit/loss/: gaussian.py  wasserstein.py
dlkit/nets/: autoencoder.py  conv.py  conv1d.py  conv2d.py  efficientnet.py  mlp.py  transformer.py  transformer1d.py  unet.py  util.py
dlkit/opt/: profiler.py  scheduler.py  train.py  train_gan.py
doc/explore/: 2025-10-23a.md  2025-10-23b.md  2025-10-23c.md  2025-10-30a.md
doc/specify/: 2025-10-27a.md  2025-10-31a.md
docs/explore/: 2025-10-27a.md  2025-10-30b.md
docs/feature/: 2025.01_training_algorithms_1.explore.md  2025.04_nonzero_initialization_1.explore.md  2025.05_ConvResNet_2.spec.md  2025.06_monitor_cpu_gpu_utilization_1.explore.md
docs/features/: 2026.01_hellinger_distance_1.explore.md
examples/: flow_matching_2d_checkerboard.ipynb
tests/: test_mode.py
tests/config/: test_parameters.py  test_params.py
tests/metrics/: test_hellinger.py  test_utils.py
tests/mgmt/: test_parameters.py
tests/nets/: test_conv1d.py  test_conv2d.py  test_efficientnet.py  test_mlp.py  test_transformer1d.py  test_transformer_experiment.py  test_unet.py
