[project]
name =  "deep-learning-toolkit"
version = "0.4.0"
authors = [
    { name = "Johann Rudi", email = "jrudi@vt.edu" },
]
description = "Deep Learning Toolkit — Reusable PyTorch building blocks for artificial intelligence & scientific machine learning: networks, losses, training loops, and utilities."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "artificial intelligence",
    "deep learning",
    "machine learning",
    "neural networks",
    "scientific computing",
    "pytorch",
]
dependencies = [
    "prettytable>=3,<4",
    "pyyaml>=6,<7",
    "torch>=2,<3",
    "tqdm>=4,<5",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "basedpyright",
    "black>=25,<26",
    "build",
    "bumpver",
    "isort>=5,<6",
    "pip-tools",
    "pytest>=8,<9",
    "twine",
]
diffusion = [
    "flow-matching>=1.0.10,<2"
]
kde = [
    "torch-kde",
]
test = [
    "pytest>=8,<9",
]

[project.urls]
Homepage = "https://github.com/johannrudi/deep-learning-toolkit"
Repository = "https://github.com/johannrudi/deep-learning-toolkit"
Issues = "https://github.com/johannrudi/deep-learning-toolkit/issues"

#[project.scripts]
#dlk = "dlk.__main__:main"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.bumpver]
current_version = "0.4.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_name = "v{new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"dlk/__init__.py" = [
    '__version__ = "{version}"',
]

[tool.isort]
profile = "black"
src_paths = ["dlk", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["dlk*"]
exclude = ["tests*", "_*"]
namespaces = false  # do not add folders without `__init__.py` file
